# smart_home_2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
smart_home_api/: Cargo.toml  api.json  public_api.json
smart_home_api/src/: error.rs  home.rs  home_client.rs  lib.rs
smart_home_api/src/command/: queue.rs
smart_home_api/src/devices/: device.rs  kettle.rs  mod.rs  socket.rs  thermometer.rs
smart_home_api/src/info_provider/: json_provider.rs  mod.rs  provider.rs
smart_home_api/src/json_rpc/: error.rs  mod.rs  reply.rs  request.rs  utils.rs
smart_home_api/src/my_smart_home/: error.rs  home.rs  mod.rs  smart_home.rs  smart_home_tcp.rs
smart_home_api/src/providers/: borrowing_providers.rs  mod.rs  owning_providers.rs  provider.rs  type_providers.rs  type_providers_alt.rs
smart_home_api/src/smart_device/: device.rs  kettle.rs  mod.rs  socket.rs  thermometer.rs
smart_home_cmd/: Cargo.toml  Readme.txt
smart_home_cmd/src/: main.rs
smart_home_tcp_client/: Cargo.toml  commands_json
smart_home_tcp_client/src/: main.rs
smart_home_tcp_server/: Cargo.toml  Readme.txt
smart_home_tcp_server/src/: main.rs
stp/: Cargo.toml
stp/src/: error.rs
