[package]
name = "smart_home_api"
version = "0.1.0"
edition = "2021"

[dependencies]
stp = { version = "0.1.0", path = "../stp" }
serde = { version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
erased-serde = "0.4.5"
jsonschema = {version = "0.26.1"}
thiserror = "2.0.9"
anyhow = "1.0.95"
